#3 Bug on iPhone 5(S) with background

--- a/style/main.css
+++ b/style/main.css
@@ -17,7 +17,7 @@ a:not([name]) {
 }
 #video-wrapper {
 	height: 640px;
-	height: 100vh;
+	/* height: 100vh; */
 	overflow: hidden;
 	position: relative;
 }
